Delete button  not aligned to resources fix

--- a/src/components/principal/unit/resource/resource.css
+++ b/src/components/principal/unit/resource/resource.css
@@ -82,13 +82,6 @@
   color: #616161;
 }
 
-.resource-container {
-  position: absolute;
-  left: 0px;
-  top: 15px;
-  z-index: 1000;
-}
-
 .last-updated {
   text-align: center;
   color: #616161;
